# kafka-elasticsearch-ecommerce-dashboard

./: .gitignore  DEMO_NARRATIVE.md  Makefile  README.md  STARTUP.md  dashboard.html  docker-compose.yml  pyproject.toml
scripts/: seed_products.py  start_generator.py  start_processor.py
src/: api.py  clickstream_generator.py  config.py  elasticsearch_setup.py  product_generator.py  product_seeder.py  stream_processor.py
